fixed lazy loading and overflow

--- a/styles/components/divider.scss
+++ b/styles/components/divider.scss
@@ -9,8 +9,6 @@
       position: relative;
       margin: 0 auto;
       height: 100%;
-      overflow-x: clip;
-
     }
   
     &__image {
